--- a/inst/www/stylesheet.css
+++ b/inst/www/stylesheet.css
@@ -51,13 +51,23 @@
   display: none;
   z-index: 9999;
 }
+
+.loader_overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #aeaeae;
+  opacity: 0.5;
+  filter: blur(5px);
+  z-index: 9998;
+  display: none;
+}
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
-}
-
-.blur-background {
-  filter: blur(5px);
 }
 
 /* Tooltip... */
