Update modal sizes. Pulled main table out into its own function.

--- a/inst/www/stylesheet.css
+++ b/inst/www/stylesheet.css
@@ -27,9 +27,9 @@
 }
 
 /* Adjust width of modal dialog */
-.modal-dialog {
-  max-width: 80% !important; /* Adjust the percentage as needed */
-}
+.modal-xl {
+  max-width: 80% !important; 
+} 
 
 /* No wrap */
 .nowrap {
